--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+#font pango:mono 8
+font pango:Robot Mono 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -36,7 +37,8 @@ bindsym $mod+Return exec xfce4-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -show run -width 30 -lines 5 -font "Roboto Mono 11" 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -92,29 +94,40 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+set $wsterm    1:Term
+set $wsweb     2:Web
+set $wsdev     3:Dev
+set $wsmail    4:Mail
+set $wschat    5:Chat
+set $wsfile    6:Files
+set $wsoffice  7:Office
+set $wsmedia   8:Media
+set $wsmisc    9:Misc
+set $wsrobot   0:Robot
+
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace $wsterm
+bindsym $mod+2 workspace $wsweb
+bindsym $mod+3 workspace $wsdev
+bindsym $mod+4 workspace $wsmail
+bindsym $mod+5 workspace $wschat
+bindsym $mod+6 workspace $wsfile
+bindsym $mod+7 workspace $wsoffice
+bindsym $mod+8 workspace $wsmedia
+bindsym $mod+9 workspace $wsmisc
+bindsym $mod+0 workspace $wsrobot
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace $wsterm
+bindsym $mod+Shift+2 move container to workspace $wsweb
+bindsym $mod+Shift+3 move container to workspace $wsdev
+bindsym $mod+Shift+4 move container to workspace $wsmail
+bindsym $mod+Shift+5 move container to workspace $wschat
+bindsym $mod+Shift+6 move container to workspace $wsfile
+bindsym $mod+Shift+7 move container to workspace $wsoffice
+bindsym $mod+Shift+8 move container to workspace $wsmedia
+bindsym $mod+Shift+9 move container to workspace $wsmisc
+bindsym $mod+Shift+0 move container to workspace $wsrobot
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -122,6 +135,10 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 1+ unmute"
+bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 1- unmute"
+bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -152,9 +169,49 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
-        tray_output primary
+    colors {
+	    # Whole color settings
+		background #000000
+		statusline #ffffff
+		separator  #666666
+
+		# Type             border  background font
+		focused_workspace  #008fff #007fff #ffffff
+		active_workspace   #333333 #5f676a #ffffff
+		inactive_workspace #333333 #222222 #888888
+		urgent_workspace   #aa0000 #990000 #ffffff
+	}
+    status_command i3status
+    tray_output primary
+    position top
 }
+
+# assign specific windows to workspaces
+assign [class="^Skype$"] → $wschat
+assign [class="^Firefox$"] → $wsweb
+assign [class="^Thunderbird$"] → $wsmail
+assign [class="^Gnome-terminal$"] → $wsterm
+assign [class="^Xfce4-terminal$"] → $wsterm
+assign [class="^Nautilus$"] → $wsfile
+assign [class="^Nemo$"] → $wsfile
+assign [class="^banshee$"] → $wsmedia
+assign [class="^Spotify"] → $wsmedia
+assign [class="^Gnome-control-center\.real$"] → $wsmedia
+assign [class="^Sublime_text$"] → $wsdev
+assign [class="^.*jetbrains-pycharm.*$"] → $wsdev
+assign [class="^Google-chrome$"] → $wsweb
+assign [class="^libreoffice-writer$"] → $wsoffice
+assign [class="^mc$"] → $wsfile
 
 exec ~/dotfiles/screenlayout/set-screen-layout.sh
 
+# autostart
+#exec --no-startup-id "i3-msg 'workspace 1; append_layout /home/michael/.config.i3/workspace-1.json'"
+exec --no-startup-id i3-msg 'workspace $wsterm; exec /usr/bin/i3-sensible-terminal'
+exec --no-startup-id i3-msg 'workspace $wsmail; exec /usr/bin/thunderbird'
+exec --no-startup-id i3-msg 'workspace $wsweb; exec /usr/bin/google-chrome'
+exec --no-startup-id i3-msg 'workspace $wsdev; exec /usr/bin/emacs'
+exec --no-startup-id i3-msg 'workspace $wsmedia; exec /usr/bin/spotify'
+#exec --no-startup-id i3-msg 'workspace $wschat; exec /usr/bin/skype'
+#exec --no-startup-id i3-msg 'workspace $wsfile; exec /usr/bin/nemo'
+#exec --no-startup-id i3-msg 'workspace $wsfile; exec /usr/bin/sparkleshare'
