--- a/i3/config
+++ b/i3/config
@@ -11,6 +11,11 @@
 
 set $mod Mod4
 
+
+# Set screen logical names
+set $mainscreen DP-5
+set $sidescreen DP-0
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:mono 8
@@ -128,6 +133,18 @@ bindsym $mod+Shift+7 move container to workspace $wsoffice
 bindsym $mod+Shift+8 move container to workspace $wsmedia
 bindsym $mod+Shift+9 move container to workspace $wsmisc
 bindsym $mod+Shift+0 move container to workspace $wsrobot
+
+# define workspace to main/sidescreen
+workspace "$wsterm" output $sidescreen
+workspace "$wsweb"  output $mainscreen
+workspace "$wsdev"  output $mainscreen
+workspace "$wsmail" output $mainscreen
+workspace "$wschat" output $mainscreen
+workspace "$wsfile" output $mainscreen
+workspace "$wsoffice" output $mainscreen
+workspace "$wsmedia" output $mainscreen
+workspace "$wsmisc" output $mainscreen
+workspace "$wsrobot" output $sidescreen
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
