--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-gaps inner 4
+gaps inner 20
 gaps outer 0
 
 set $mod Mod4
@@ -21,7 +21,7 @@ set $mainscreen VGA-1
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:mono 8
-font pango:Robot Mono 10
+font pango:Robot Mono 14
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -38,14 +38,14 @@ font pango:Robot Mono 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+Return exec rxvt-unicode
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec rofi -show run -width 30 -lines 5 -font "Roboto Mono 11" 
+bindsym $mod+d exec rofi -show run -width 30 -lines 5
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -228,7 +228,7 @@ exec ~/dotfiles/screenlayout/set-screen-layout.sh
 
 # autostart
 #exec --no-startup-id "i3-msg 'workspace 1; append_layout /home/michael/.config.i3/workspace-1.json'"
-exec --no-startup-id i3-msg 'workspace $wsterm; exec /usr/bin/i3-sensible-terminal'
+exec --no-startup-id i3-msg 'workspace $wsterm; exec /usr/bin/rxvt-unicode
 exec --no-startup-id i3-msg 'workspace $wsmail; exec /usr/bin/thunderbird'
 exec --no-startup-id i3-msg 'workspace $wsweb; exec /usr/bin/google-chrome'
 exec --no-startup-id i3-msg 'workspace $wsdev; exec /usr/bin/emacs'
@@ -237,3 +237,4 @@ exec --no-startup-id i3-msg 'workspace $wsmedia; exec /usr/bin/spotify'
 #exec --no-startup-id i3-msg 'workspace $wsfile; exec /usr/bin/nemo'
 #exec --no-startup-id i3-msg 'workspace $wsfile; exec /usr/bin/sparkleshare'
 exec_always --no-startup-id $HOME/dotfiles/polybar/polybar.sh
+#exec --no-startup-id compton
