--- a/.config/i3/config
+++ b/.config/i3/config
@@ -185,26 +185,6 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#    colors {
-	    # Whole color settings
-#		background #000000
-#		statusline #ffffff
-#		separator  #666666
-
-		# Type             border  background font
-#		focused_workspace  #008fff #007fff #ffffff
-#		active_workspace   #333333 #5f676a #ffffff
-#		inactive_workspace #333333 #222222 #888888
-#		urgent_workspace   #aa0000 #990000 #ffffff
-#	}
-#    status_command i3status
-#    tray_output primary
-#    position top
-#}
-
 # assign specific windows to workspaces
 assign [class="^Skype$"] → $wschat
 assign [class="^Firefox$"] → $wsweb
@@ -224,17 +204,12 @@ assign [class="^mc$"] → $wsfile
 
 new_window 1pixel
 
-exec ~/dotfiles/screenlayout/set-screen-layout.sh
-
 # autostart
-#exec --no-startup-id "i3-msg 'workspace 1; append_layout /home/michael/.config.i3/workspace-1.json'"
-exec --no-startup-id i3-msg 'workspace $wsterm; exec /usr/bin/rxvt-unicode
+exec_always --no-startup-id $HOME/shellscripts/screenlayout/set-screen-layout.sh
+exec_always --no-startup-id $HOME/shellscripts/polybar/polybar.sh
+exec --no-startup-id i3-msg 'workspace $wsterm; exec /usr/bin/rxvt-unicode'
 exec --no-startup-id i3-msg 'workspace $wsmail; exec /usr/bin/thunderbird'
 exec --no-startup-id i3-msg 'workspace $wsweb; exec /usr/bin/google-chrome'
 exec --no-startup-id i3-msg 'workspace $wsdev; exec /usr/bin/emacs'
 exec --no-startup-id i3-msg 'workspace $wsmedia; exec /usr/bin/spotify'
-#exec --no-startup-id i3-msg 'workspace $wschat; exec /usr/bin/skype'
-#exec --no-startup-id i3-msg 'workspace $wsfile; exec /usr/bin/nemo'
-#exec --no-startup-id i3-msg 'workspace $wsfile; exec /usr/bin/sparkleshare'
-exec_always --no-startup-id $HOME/dotfiles/polybar/polybar.sh
-#exec --no-startup-id compton
+
