--- a/.config/i3/config
+++ b/.config/i3/config
@@ -205,9 +205,7 @@ assign [class="^mc$"] → $wsfile
 new_window 1pixel
 
 # autostart
-exec_always --no-startup-id $HOME/shellscripts/screenlayout/set-screen-layout.sh
-exec_always --no-startup-id $HOME/shellscripts/polybar/polybar.sh
-exec_always --no-startup-id /usr/bin/compton
+exec_always --no-startup-id $HOME/.config/i3/startup.sh
 exec --no-startup-id i3-msg 'workspace $wsterm; exec /usr/bin/rxvt-unicode'
 exec --no-startup-id i3-msg 'workspace $wsmail; exec /usr/bin/thunderbird'
 exec --no-startup-id i3-msg 'workspace $wsweb; exec /usr/bin/google-chrome'
