--- a/.config/i3/config
+++ b/.config/i3/config
@@ -45,7 +45,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec rofi -show run -width 30 -lines 5
+bindsym $mod+d exec zsh -c "rofi -show run -width 30 -lines 5"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
