--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -1,3 +1,4 @@
+rofi.modi:                 run,window,ssh
 rofi.color-enabled: true
 rofi.color-window: #141021, #c16772, #9568a1
 rofi.color-normal: #141021, #ffeefc, #312842, #c16772, #ffeefc
