--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,8 +15,8 @@ gaps outer 0
 set $mod Mod4
 
 # Set screen logical names
-set $mainscreen VGA-1
-#set $sidescreen DP-0
+set $mainscreen DP-1
+#set $sidescreen DP-4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -38,7 +38,7 @@ font pango:Robot Mono 14
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec rxvt-unicode
+bindsym $mod+Return exec xfce4-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
