--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -7,6 +7,8 @@ height = 40
 
 #monitor = ${env:MONITOR:eDP-1}
 #monitor = ${env:MONITOR:DP-4}
+#monitor = ${env:MONITOR:DP-5}
+monitor = ${env:MONITOR:DP-5}
 
 background = #141021
 foreground = #c4b7c5
