--- a/.config/i3/config
+++ b/.config/i3/config
@@ -178,6 +178,21 @@ mode "resize" {
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
 
+        # Pressing left will shrink the window’s width.
+        # Pressing right will grow the window’s width.
+        # Pressing up will shrink the window’s height.
+        # Pressing down will grow the window’s height.
+        #bindcode 44 resize shrink width 10 px or 10 ppt
+        #bindcode 45 resize grow height 10 px or 10 ppt
+        #bindcode 46 resize shrink height 10 px or 10 ppt
+        #bindcode 47 resize grow width 10 px or 10 ppt
+
+        # same bindings, but for the arrow keys
+        #bindcode 113 resize shrink width 10 px or 10 ppt
+        #bindcode 116 resize grow height 10 px or 10 ppt
+        #bindcode 111 resize shrink height 10 px or 10 ppt
+        #bindcode 114 resize grow width 10 px or 10 ppt
+
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -213,3 +228,5 @@ exec --no-startup-id i3-msg 'workspace $wsweb; exec /usr/bin/google-chrome'
 #exec --no-startup-id i3-msg 'workspace $wsdev; exec /usr/bin/emacs'
 exec --no-startup-id i3-msg 'workspace $wsmedia; exec /usr/bin/spotify'
 
+exec "setxkbmap -layout us,se"
+exec "setxkbmap -option 'grp:alt_shift_toggle'"
