--- a/.gitconfig
+++ b/.gitconfig
@@ -10,3 +10,6 @@
     
 [includeIf "gitdir:~/.dotfiles.git"]
     path = ~/.gitconfig-dots
+[user]
+	name = Philip Werner
+	email = phiwer@gmail.com
