--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,9 @@
 [includeIf "gitdir:~/.dotfiles.git"]
     path = ~/.gitconfig-dots
 [user]
+
     name = Philip Werner
     email = phiwer@gmail.com
     helper = cache --timeout=3600
+[pager]
+	branch = false
