Temp removal of user settings. Move to includeIf later on.

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,16 +4,13 @@
     user = phiwer
 [core]
     editor = emacs
-
-[includeIf "gitdir:~/sources/aosp/icup/**"]
-    path = ~/.gitconfig-work
-
-[includeIf "gitdir:~/.dotfiles.git"]
-    path = ~/.gitconfig-dots
-[user]
-
-    name = Philip Werner
-    email = phiwer@gmail.com
-    helper = cache --timeout=3600
+#[user]
+#    name = Philip Werner
+#    email = phiwer@gmail.com
+#    helper = cache --timeout=3600
 [pager]
 	branch = false
+[includeIf "gitdir:~/sources/aosp/icup/**"]
+    path = ~/.gitconfig-work
+[includeIf "gitdir:~/.dotfiles.git/"]
+    path = ~/.gitconfig-dots
