--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -20,9 +20,11 @@ fixed-center = true
 #font-1 = Material\ Icons:size=11;2
 #font-2 = xos4\ Terminus:size=14;0
 #font-3 = Siji:pixelsize=11;1
-font-0 = "Roboto Mono Medium for Powerline:style=Medium,Regular;pixelsize=12;1"
-font-1 = "FontAwesome:size=12;0"
-font-2 = "PragmataPro Nerd Font:pixelsize=12:weight=bold;0"
+#font-0 = "Roboto Mono Medium for Powerline:style=Medium,Regular;pixelsize=12;1"
+#font-0 = "Consolas:style=Medium,Regular;pixelsize=12;1"
+font-0 = "Hack:style=Medium,Regular;pixelsize=12;1"
+#font-1 = "FontAwesome:size=12;0"
+#font-2 = "PragmataPro Nerd Font:pixelsize=12:weight=bold;0"
 #font-1 =
 
 #font-0 = "Roboto Mono Medium for Powerline:pixelsize=12;1"
