--- a/.config/i3/config
+++ b/.config/i3/config
@@ -224,7 +224,7 @@ exec_always --no-startup-id $HOME/.config/i3/startup.sh
 exec_always --no-startup-id $HOME/.config/i3/screen-setup.sh
 
 #exec --no-startup-id i3-msg 'workspace $wsterm; exec /usr/bin/rxvt-unicode'
-exec --no-startup-id i3-msg 'workspace $wsweb; exec /usr/bin/google-chrome'
+exec --no-startup-id i3-msg 'workspace $wsweb; exec /usr/bin/firefox'
 #exec --no-startup-id i3-msg 'workspace $wsdev; exec /usr/bin/emacs'
 exec --no-startup-id i3-msg 'workspace $wsmedia; exec /usr/bin/spotify'
 
