--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,7 +16,6 @@ set $mod Mod4
 
 # Set screen logical names
 set $mainscreen primary
-set $mainscreen primary
 #set $sidescreen DP-4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -231,3 +230,5 @@ exec --no-startup-id i3-msg 'workspace $wsmedia; exec /usr/bin/spotify'
 
 exec "setxkbmap -layout us,se"
 exec "setxkbmap -option 'grp:alt_shift_toggle'"
+
+focus_follows_mouse no
