--- a/.gitconfig
+++ b/.gitconfig
@@ -14,3 +14,14 @@
     path = ~/.gitconfig-work
 [includeIf "gitdir:~/.dotfiles.git/"]
     path = ~/.gitconfig-dots
+[user]
+	email = philip.werner@volvocars.com
+	name = Werner, Philip
+[http]
+	cookiefile = ~/.gitcookies
+[credential]
+	helper = cache --timeout=2592000
+[pull]
+	rebase = true
+[merge]
+    tool = meld
