--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,7 +15,8 @@ gaps outer 0
 set $mod Mod4
 
 # Set screen logical names
-set $mainscreen DP-0
+set $mainscreen primary
+set $mainscreen primary
 #set $sidescreen DP-4
 
 # Font for window titles. Will also be used by the bar unless a different font
