Add print screen shortcut

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -98,6 +98,8 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
+bindsym Control+Print exec gnome-screenshot -i
+
 # focus the child container
 #bindsym $mod+d focus child
 
